--- a/Admin-Dashboard.css
+++ b/Admin-Dashboard.css
@@ -5,6 +5,15 @@
   font-weight: 900;
 }
 
+/*Whole Page Grid*/
+
+div#main-grid-container {
+  display: grid;
+  grid-template: repeat(10, minmax(100px, 1fr)) / repeat(5, minmax(100px, 1fr));
+}
+
+/*Whole Page Grid Ended*/
+
 /*Sidebar Section*/
 
 a {
@@ -13,7 +22,7 @@ a {
 
 div#sidebar {
   display: grid;
-  border: 5px solid #38bdf8;
+  border: 5px solid #4ade80;
   grid-template: repeat(16, 1fr) / 1fr;
   grid-row: 1/11;
 }
@@ -74,21 +83,92 @@ div#sidebar {
 
 /*Sidebar Section Ended*/
 
-/*Whole Page Grid*/
-
-div#main-grid-container {
-  display: grid;
-  grid-template: repeat(10, 1fr) / repeat(5, 1fr);
-}
-
-/*Whole Page Grid Ended*/
-
 /*Header*/
 
 div#header {
   border: 5px solid #a3e635;
+  display: grid;
+  grid-template: repeat(2, minmax(50px, 1fr)) / repeat(10, minmax(50px, 1fr));
+  justify-content: center;
+  align-items: center;
   grid-row: 1/3;
   grid-column: 2/6;
+}
+
+span#search-icon {
+  display: grid;
+  justify-content: end;
+}
+
+span#search-bar {
+  display: grid;
+  grid-area: 1/2/2/7;
+  justify-content: flex-start;
+}
+
+span#notification {
+  justify-self: flex-end;
+  align-self: center;
+}
+
+span.github {
+  justify-self: flex-end;
+  align-self: center;
+}
+
+input {
+  width: 80ch;
+  height: 30px;
+  border-radius: 30px;
+  background-color: #e2e8f0;
+  grid-area: 2/6;
+}
+
+#second-row-account {
+  grid-area: 2/1/3/2;
+}
+
+#intro {
+  display: grid;
+  grid-area: 2/2/3/5;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+span#big {
+  display: grid;
+  font-size: 22px;
+}
+
+button#first-button {
+  display: grid;
+  grid-area: 2/7/3/8;
+  justify-content: center;
+}
+
+button#second-button {
+  display: grid;
+  grid-area: 2/8/3/9;
+  justify-content: center;
+}
+
+button#third-button {
+  display: grid;
+  grid-area: 2/9/3/10;
+
+  justify-content: center;
+}
+.buttons {
+  border: none;
+  min-width: 50px;
+  max-width: 100px;
+  min-height: 35px;
+  max-height: 75px;
+  border-radius: 20px;
+  background-color: #22c55e;
+  align-items: center;
+  cursor: pointer;
+  color: #fff;
 }
 
 /*Header Section Ended*/
